Fixed glyphicon alignments

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -1,4 +1,8 @@
 
+.glyphicon {
+    font-size : 20px;
+}
+
 .form-spacing {
     margin-top: 20px;
     width:50%;
